--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
     "react-native-elements": "^0.13.0",
+    "react-native-simple-radio-button": "^2.5.0-alpha.1",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.0"
