--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-modal": "^2.4.0",
     "react-native-modal-dropdown": "^0.4.4",
     "react-native-simple-radio-button": "^2.5.0-alpha.1",
+    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.0"
